2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnheader.el (nnheader-init-server-buffer): Use with-current-buffer.
	(nnheader-string-as-multibyte): Remove.

	* mm-view.el: Use inhibit-read-only.
	(mm-inline-text-html-render-with-w3, mm-inline-message): Use dolist.
	(mm-pkcs7-signed-magic, mm-pkcs7-enveloped-magic): Use just string
	or unibyte-string.

	* mm-uu.el (mm-uu-copy-to-buffer): Preserve (uni/multi)byteness.
	(mm-uu-yenc-extract): Use with-current-buffer.

	* gnus-soup.el (gnus-soup-send-packet): Don't use
	mm-with-unibyte-current-buffer since the buffer is unibyte anyway.

	* nnmh.el: Use with-current-buffer.
	(nnmh-request-list-1): Use mm-string-to-multibyte rather than
	mm-string-as-multibyte on the output of mm-encode-coding-string.

	* nnimap.el (nnimap-retrieve-headers-progress): Use a unibyte buffer.
	(nnimap-request-move-article): Use with-current-buffer.

	* mm-decode.el (mm-with-part): Set the buffer to unibyte before
	inserting the handle-buffer's text, so the implicit multibyte->unibyte
	conversion uses string-make-unibyte rather than string-as-unibyte.

	* gnus-msg.el: Use with-current-buffer.

	* message.el (message-ignored-resent-headers): Add "Delivered-To".

2008-03-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-old-incoming-confirm):
	Change default to nil.
	(mail-source-delete-old-incoming): Make confirmation prompt more clear.

2008-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-narrow-to-page): Position point properly.
	(gnus-article-goto-prev-page): Work for articles having ^L's.

	* gnus-sum.el (gnus-summary-end-of-article): Remove needless narrowing.

	* mm-view.el (mm-w3m-standalone-supports-m17n-p): Fix typo.

2008-03-07  Karl Fogel  <kfogel@red-bean.com>

	* gnus-bookmark.el: Adjust for renames in bookmark.el.
	(gnus-bookmark-make-record): Was `gnus-bookmark-make-cell'.
	(gnus-bookmark-jump): Adjust some variable names.

2008-03-06  Teodor Zlatanov  <tzz@lifelogs.com>
